<resources>
    <string name="text_inside_circle_button_text_normal">Text Inside Circle Button(Normal)</string>
    <string name="text_inside_circle_button_text_highlighted">Text Inside Circle Button(Highlighted)</string>
    <string name="text_inside_circle_button_text_unable">Text Inside Circle Button(Unable)</string>
    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
    <string name="text_outside_circle_button_text_highlighted">Text Outside Circle Button(Highlighted)</string>
    <string name="text_outside_circle_button_text_unable">Text Outside Circle Button(Unable)</string>
    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_text_highlighted">Ham Button Text(Highlighted)</string>
    <string name="text_ham_button_text_unable">Ham Button Text(Unable)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>
    <string name="text_ham_button_sub_text_highlighted">Ham Button Sub Text(Highlighted)</string>
    <string name="text_ham_button_sub_text_unable">Ham Button Sub Text(Unable)</string>
    <string name="app_name">悦游</string>
    <string name="bottom1">推荐</string>
    <string name="bottom2">加入</string>
    <string name="bottom3">论坛</string>
    <string name="bottom4">我</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_begin">BeginActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string-array name="sorts">
        <item>狼人杀</item>
        <item>UNO</item>
        <item>三国杀</item>
        <item>谁是卧底</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="hint">Type emoji here</string>
    <string name="i_love_emojicon">I \ue32d emojicon</string>
    <string name="use_system_default">Use system default emojicon</string>
    <string name="function_introduction">功能介绍</string>
    <string name="complaint">投诉</string>
    <string name="check_update">检查更新</string>
    <string name="terms_of_use_and_privacy_policy">使用条约</string>
    <string name="header_pic">头像</string>
    <string name="nickname">昵称</string>
    <string name="wechat_credit">信用</string>
    <string name="six">性别</string>
    <string name="my_location">地区</string>
    <string name="area">地区</string>
    <string name="password">密码</string>
    <string name="verification_code">验证码</string>
    <string name="my_signature">个性签名</string>
    <string name="edit_information">编辑...</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="unable_to_connect">连接不到服务器</string>


</resources>
