<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_recomment"
        android:title="@string/bottom1" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/icon_add"
        android:title="@string/bottom2" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/icon_forum"
        android:title="@string/bottom3"/>
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/icon_chat"
        android:title="@string/bottom4"/>
    <item
        android:id="@+id/navigation_email2"
        android:icon="@drawable/icon_me"
        android:title="@string/bottom5"
       />
</menu>
