<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="160px"
        android:background="@drawable/selector_option_item"
        android:gravity="center_vertical"
        android:paddingRight="6px">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6px"
            android:layout_marginLeft="30px"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/header_pic"
            android:textColor="@color/black0"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ivHeaderImage"
            android:layout_width="130px"
            android:layout_height="130px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:scaleType="centerCrop" />
    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px" />

    <com.lqr.optionitemview.OptionItemView
        android:id="@+id/oivName"
        style="@style/OptionItem"
        android:background="@drawable/selector_option_item"
        app:left_text="@string/nickname"
        app:left_text_color="@color/black0"
        app:left_text_margin_left="30px"
        app:left_text_size="16sp"
        app:right_text="CSDN_LQR"
        app:right_text_color="@color/gray2"
        app:right_text_margin_right="40px"
        app:right_text_size="14sp" />

    <View
        style="@style/Line"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px" />

    <com.lqr.optionitemview.OptionItemView
        android:id="@+id/oivCredit"
        style="@style/OptionItem"
        android:background="@drawable/selector_option_item"
        app:left_text="@string/wechat_credit"
        app:left_text_color="@color/black0"
        app:left_text_margin_left="30px"
        app:left_text_size="16sp"
        app:right_text="500"
        app:right_text_color="@color/gray2"
        app:right_text_margin_right="40px"
        app:right_text_size="14sp" />

    <View
        style="@style/Line"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px" />

    <LinearLayout
        android:id="@+id/zxing_layout"
        android:layout_width="match_parent"
        android:layout_height="160px"
        android:background="@drawable/selector_option_item"
        android:gravity="center_vertical"
        android:paddingRight="6px">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6px"
            android:layout_marginLeft="30px"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/zxing"
            android:textColor="@color/black0"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ivHeaderZxing"
            android:layout_width="130px"
            android:layout_height="130px"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:scaleType="centerCrop" />
    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px" />

    <com.lqr.optionitemview.OptionItemView
        android:id="@+id/oivSix"
        style="@style/OptionItem"
        android:background="@drawable/selector_option_item"
        app:left_text="@string/six"
        app:left_text_color="@color/black0"
        app:left_text_margin_left="30px"
        app:left_text_size="16sp"
        app:right_image_margin_right="40px"
        app:right_text="男"
        app:right_text_color="@color/gray2" />

    <View
        style="@style/Line"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px" />

    <com.lqr.optionitemview.OptionItemView
        android:id="@+id/oivLocation"
        style="@style/OptionItem"
        android:background="@drawable/selector_option_item"
        app:left_text="@string/my_location"
        app:left_text_color="@color/black0"
        app:left_text_margin_left="30px"
        app:left_text_size="16sp"
        app:right_image_margin_right="40px"
        app:right_text_color="@color/gray2" />

    <View
        style="@style/Line"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px" />

    <com.lqr.optionitemview.OptionItemView
        android:id="@+id/oivSignature"
        style="@style/OptionItem"
        android:background="@drawable/selector_option_item"
        app:left_text="@string/my_signature"
        app:left_text_color="@color/black0"
        app:left_text_margin_left="30px"
        app:left_text_size="16sp"
        app:right_image_margin_right="40px"
        app:right_text_color="@color/gray2" />
</LinearLayout>